# Evolva

./: .gitignore  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: loop-engineering-product-design.md
docs/dev-loop-runs/2026-06-15-generic-loop-planner/: 00-requirements.md  01-plan.md  02-plan-review-rounds.md  03-implementation-log.md  04-acceptance-report.md  05-pr-summary.html
docs/dev-loop-runs/2026-06-15-loop-engineering-landing/: 00-requirements.md  01-plan.md  02-plan-review-rounds.md  03-implementation-log.md  04-acceptance-report.md  05-pr-summary.html
docs/dev-loop-runs/2026-06-18-production-hardening/: 00-requirements.md  01-plan.md  02-plan-review-rounds.md  (+4 more)
evals/baselines/: scorers.json  security.json
evals/tasks/: repo_index.jsonl  scorers.jsonl  security.jsonl  smoke.jsonl  trace_artifacts.jsonl
evolva/: cli.py  config.py  storage.py  tui.py
evolva/agent/: artifacts.py  capabilities.py  context.py  core.py  dream.py  evolution.py  images.py  langgraph_runtime.py  llm.py  mcp.py  mcp_presets.py  memory.py  multi_agent.py  observability.py  policy.py  redaction.py  repo_index.py  sandbox.py  skills.py  todo.py  tracing.py
evolva/eval/: __init__.py  benchmark.py  harness.py  scorers.py
evolva/loops/: __init__.py  planner.py  registry.py  runner.py  spec.py
evolva/maintenance/: optimizer.py
evolva/mcp/: servers.example.json
evolva/skills/: general_agent.md
evolva/tools/: base.py  benchmark.py  builtin.py  taskset.py
evolva/workflow/: __init__.py  engine.py
tests/: conftest.py  test_agent_cli_workflow_mcp_eval_tui.py  test_benchmark_tools.py  test_config_runtime_paths.py  test_core.py  test_dream.py  test_llm_and_images.py  test_loops.py  test_maintenance_optimizer.py  test_repo_index.py  test_sandbox_policy_tools.py  test_state_stores.py  test_taskset_tools.py
(+29 files in other folders)
