[project]
name = "evolva"
version = "0.1.0"
description = "A DeerFlow-inspired local super-agent with CLI chat, tools, memory, skills, and self-evolution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
evolva = "evolva.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
